# syntaxis

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  Justfile  LICENSE  README.md  build.rs  deny.toml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  index.html  lefthook.yml  lighthouserc.json  package-lock.json  package.json  rust-toolchain.toml  tailwind.css
.zed/: settings.json  tasks.json
assets/: ai-chat.js  app.css  tailwind.css  ui.js
assets/ai/: chat.css
assets/files/: markdown-preview.css
assets/terminal/: README.md  bridge-source.js  ghostty-web.bundle.js  source-links.js  source-links.test.js
crates/agent/: Cargo.toml
crates/agent-host/: Cargo.toml
crates/agent-host/src/: lib.rs  session_store.rs
crates/agent/src/: lib.rs
crates/code-editor/: Cargo.toml  README.md
crates/code-editor/assets/: dioxus-code-editor.css  editor-bridge.js  editor-command.js
crates/code-editor/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  completion.rs  config.rs  generated_completions.rs  language.rs  lib.rs  tree.rs
crates/git/: Cargo.toml
crates/git-host/: Cargo.toml
crates/git-host/src/: lib.rs  operations.rs  parser.rs  runner.rs  worktrees.rs
crates/git-host/src/operations/: tests.rs
crates/git-host/src/runner/: tests.rs
crates/git/src/: clone_progress.rs  commit.rs  conflict.rs  diff.rs  error.rs  lib.rs  operations.rs  repository.rs  status.rs
crates/notifications/: Cargo.toml
crates/notifications-host/: Cargo.toml
crates/notifications-host/src/: lib.rs
crates/notifications/src/: lib.rs
crates/terminal/: Cargo.toml  README.md
crates/terminal-host/: Cargo.toml  README.md
crates/terminal-host/src/: lib.rs  manager.rs  replay.rs
crates/terminal-host/src/manager/: tests.rs
crates/terminal/src/: lib.rs  protocol.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: badge.rs  button.rs  checkbox.rs  dialog.rs  drawer.rs  empty_state.rs  field.rs  file_icon.rs  form.rs  git_change.rs  icon.rs  icon_button.rs  input.rs  lib.rs  menu.rs  panel.rs  project_badge.rs  select.rs  size.rs  slide_to_confirm.rs  template_icon.rs  textarea.rs  toast.rs
crates/workspace/: Cargo.toml  README.md
crates/workspace-host/: Cargo.toml  README.md
crates/workspace-host/src/: browser.rs  entry.rs  error.rs  files.rs  icon.rs  lib.rs  path_scope.rs  policy.rs  profile.rs  record.rs  registry.rs  watcher.rs
crates/workspace-host/src/files/: tests.rs
crates/workspace-host/src/registry/: tests.rs
crates/workspace-host/src/watcher/: tests.rs
crates/workspace-local/: Cargo.toml  README.md
crates/workspace-local/src/: browser.rs  files.rs  lib.rs  policy.rs  registry.rs  watcher.rs
crates/workspace-local/src/files/: tests.rs
crates/workspace-local/src/registry/: tests.rs
crates/workspace/src/: browser.rs  error.rs  events.rs  filesystem.rs  lib.rs  mock.rs  mock_browser.rs  mock_files.rs  operations.rs  runtime.rs  session.rs  workspace.rs
crates/workspace/src/mock_files/: tests.rs
docs/: pi-management.md
scripts/: build-terminal.mjs  ensure-js-deps.mjs  generate-completions.mjs  generate-pi-settings.mjs  lighthouse-server.sh
src/: ai.rs  app.rs  files.rs  git.rs  main.rs  mock.rs  terminal.rs  ui.rs  wasm_stderr.c
src/ai/: api.rs  components.rs  extensions.rs  generated_settings.rs  management.rs  notifications.rs  resources.rs
src/ai/api/: server.rs
src/ai/api/server/: management.rs
src/ai/api/server/management/: prompts.rs  skills.rs
src/ai/components/: composer.rs  extension_dialog.rs  session_sidebar.rs  timeline.rs
src/files/: dialogs.rs  documents.rs  editor_ui.rs  explorer.rs  git_actions.rs  location.rs  preview.rs  search.rs
src/git/: api.rs  changes.rs  dialogs.rs  history.rs  remotes.rs  worktrees.rs
src/git/api/: server.rs
src/terminal/: api.rs  renderer.rs
src/terminal/api/: commands.rs  server.rs
src/terminal/api/commands/: discovery.rs
src/workspace/: api.rs  client.rs  events.rs  home.rs  mod.rs  project_icon.rs  remote.rs  shell.rs  worktrees.rs
src/workspace/api/: server.rs
src/workspace/home/: recent.rs
src/workspace/home/dialogs/: bootstrap.rs  cleanup.rs  delete.rs  folder.rs  git_url.rs  local.rs  mise_tools.rs  mod.rs  new_project.rs  notes.rs  update_tools.rs
