[package]
name = "syntaxis"
version = "0.1.0"
authors = ["Nikolay Stoynov <arvigeus@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace]
members = [
    "crates/git",
    "crates/git-host",
    "crates/terminal",
    "crates/terminal-host",
    "crates/ui",
    "crates/workspace",
    "crates/workspace-host",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
bytes = "1.10.1"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dioxus-code = { git = "https://github.com/DioxusLabs/dioxus-code", rev = "928568e248ebcda602ee0c071af44dfef849ec15", default-features = false, features = ["macro"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/dioxus-components", rev = "bf007c15d0cf4d04d3181cc46cf12325aa773955" }
dioxus-sdk-time = "0.7.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
syntaxis-ui = { path = "crates/ui" }
syntaxis-git = { path = "crates/git" }
syntaxis-git-host = { path = "crates/git-host", optional = true }
syntaxis-terminal = { path = "crates/terminal" }
syntaxis-workspace = { path = "crates/workspace" }
syntaxis-workspace-host = { path = "crates/workspace-host", optional = true }
syntaxis-terminal-host = { path = "crates/terminal-host", optional = true }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt", "sync", "time"], optional = true }
tokio-util = { version = "0.7.15", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:syntaxis-workspace-host", "dep:tokio"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:syntaxis-git-host",
    "dep:syntaxis-terminal-host",
    "dep:syntaxis-workspace-host",
    "dep:tokio",
    "dep:tokio-util",
]

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
