[package]
name = "syntaxis"
version = "0.1.0"
authors = ["Nikolay Stoynov <arvigeus@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace]
members = [
    "crates/agent",
    "crates/agent-host",
    "crates/editor",
    "crates/code-editor",
    "crates/git",
    "crates/git-host",
    "crates/notifications",
    "crates/notifications-host",
    "crates/terminal",
    "crates/terminal-host",
    "crates/ui",
    "crates/workspace",
    "crates/workspace-host",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arborium = { version = "2.18.1", default-features = false }
async-trait = "0.1.91"
base64 = "0.22.1"
bytes = "1.12.1"
csv = "1.4.0"
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
dioxus-code = { git = "https://github.com/DioxusLabs/dioxus-code", rev = "928568e248ebcda602ee0c071af44dfef849ec15", default-features = false, features = [
    "macro",
    "runtime",
    "lang-bash",
    "lang-c",
    "lang-c-sharp",
    "lang-cpp",
    "lang-css",
    "lang-dart",
    "lang-diff",
    "lang-dockerfile",
    "lang-go",
    "lang-html",
    "lang-ini",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kotlin",
    "lang-lua",
    "lang-markdown",
    "lang-nginx",
    "lang-php",
    "lang-powershell",
    "lang-python",
    "lang-ruby",
    "lang-scss",
    "lang-sql",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-xml",
    "lang-yaml",
] }
dioxus-code-editor = { path = "crates/code-editor" }
dioxus-icons = "0.1.0"
dioxus-primitives = { git = "https://github.com/DioxusLabs/dioxus-components", rev = "bf007c15d0cf4d04d3181cc46cf12325aa773955" }
dioxus-sdk-time = "0.7.0"
futures-util = "0.3.33"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
toml = { version = "1.1.3", optional = true }
syntaxis-agent = { path = "crates/agent" }
syntaxis-agent-host = { path = "crates/agent-host", optional = true }
syntaxis-ui = { path = "crates/ui" }
syntaxis-editor = { path = "crates/editor" }
syntaxis-git = { path = "crates/git" }
syntaxis-git-host = { path = "crates/git-host", optional = true }
syntaxis-notifications = { path = "crates/notifications" }
syntaxis-notifications-host = { path = "crates/notifications-host", optional = true }
syntaxis-terminal = { path = "crates/terminal" }
syntaxis-workspace = { path = "crates/workspace" }
syntaxis-workspace-host = { path = "crates/workspace-host", optional = true }
syntaxis-terminal-host = { path = "crates/terminal-host", optional = true }
web-time = "1.1.0"
url = "2.5.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.4.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.53.0", features = ["io-util", "macros", "process", "rt", "sync", "time"], optional = true }
tokio-util = { version = "0.7.18", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
cc = "1.3.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:syntaxis-workspace-host", "dep:tokio"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:toml",
    "dep:syntaxis-agent-host",
    "dep:syntaxis-git-host",
    "dep:syntaxis-notifications-host",
    "dep:syntaxis-terminal-host",
    "dep:syntaxis-workspace-host",
    "dep:reqwest",
    "dep:tokio",
    "dep:tokio-util",
]

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"

# These restriction lints conflict with established, idiomatic Rust patterns or
# impose library-oriented constraints that do not suit this application.
absolute_paths = "allow"
allow_attributes = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
create_dir = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
empty_enum_variants_with_brackets = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
field_scoped_visibility_modifiers = "allow"
filetype_is_file = "allow"
float_arithmetic = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
inline_modules = "allow"
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
map_err_ignore = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
missing_asserts_for_indexing = "allow"
min_ident_chars = "allow"
mod_module_files = "allow"
module_name_repetitions = "allow"
multiple_inherent_impl = "allow"
must_use_candidate = "allow"
non_ascii_literal = "allow"
needless_raw_strings = "allow"
panic = "allow"
partial_pub_fields = "allow"
pattern_type_mismatch = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
renamed_function_params = "allow"
same_name_method = "allow"
self_named_module_files = "allow"
separated_literal_suffix = "allow"
semicolon_outside_block = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
shadow_same = "allow"
single_char_lifetime_names = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
string_slice = "allow"
unreachable = "allow"
unwrap_used = "allow"
unused_async = "allow"
unused_trait_names = "allow"
verbose_file_reads = "allow"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"
