[package]
name = "syntaxis-agent-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1.0.150"
regex = "1.13.1"
syntaxis-agent = { path = "../agent" }
syntaxis-notifications = { path = "../notifications" }
syntaxis-notifications-host = { path = "../notifications-host" }
syntaxis-workspace = { path = "../workspace" }
tokio = { version = "1.53.0", features = ["io-util", "macros", "process", "rt", "sync"] }
uuid = { version = "1.24.0", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
