[package]
name = "dioxus-code-editor"
version = "0.1.4-syntaxis.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
dioxus = { version = "0.7.1", default-features = false, features = ["lib"] }
dioxus-code = { git = "https://github.com/DioxusLabs/dioxus-code", rev = "928568e248ebcda602ee0c071af44dfef849ec15", default-features = false, features = ["runtime"] }
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true
