[package]
name = "syntaxis-git-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.89"
syntaxis-git = { path = "../git" }
syntaxis-workspace = { path = "../workspace" }
syntaxis-workspace-host = { path = "../workspace-host" }
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["io-util", "macros", "process", "rt", "time"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
zeroize = "1.8.1"
uuid = { version = "1.17.0", features = ["v5"] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
