[package]
name = "syntaxis-git-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.91"
syntaxis-git = { path = "../git" }
syntaxis-workspace = { path = "../workspace" }
syntaxis-workspace-host = { path = "../workspace-host" }
tempfile = "3.27.0"
tokio = { version = "1.53.0", features = ["io-util", "macros", "process", "rt", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
zeroize = "1.9.0"
uuid = { version = "1.24.0", features = ["v5"] }

[dev-dependencies]
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
