[package]
name = "syntaxis-notifications-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
syntaxis-notifications = { path = "../notifications" }
tokio = { version = "1.53.0", features = ["sync"] }

[lints]
workspace = true
