[package]
name = "syntaxis-terminal-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
portable-pty = "0.9.0"
syntaxis-notifications = { path = "../notifications" }
syntaxis-notifications-host = { path = "../notifications-host" }
syntaxis-terminal = { path = "../terminal" }
syntaxis-workspace = { path = "../workspace" }
tokio = { version = "1.46.1", features = ["rt", "sync", "time"] }
uuid = { version = "1.17.0", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
