[package]
name = "syntaxis-workspace-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
linguist = "0.1.10"
linguist-types = "0.1.3"
notify = "8.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde_json = "1.0.140"
syntaxis-workspace = { path = "../workspace" }
tempfile = "3.20.0"
toml = "0.8.2"
uuid = { version = "1.17.0", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures-lite = "2.6.0"
tempfile = "3.20.0"

[lints]
workspace = true
