[package]
name = "syntaxis-workspace-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-trait = "0.1.91"
base64 = "0.22.1"
linguist = "0.1.10"
linguist-types = "0.1.3"
notify = "8.2.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
syntaxis-workspace = { path = "../workspace" }
tempfile = "3.27.0"
toml = "1.1.3"
uuid = { version = "1.24.0", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures-lite = "2.6.1"
tempfile = "3.27.0"

[lints]
workspace = true
